--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@ button {
 }
 
 #start-btn {
-  background-color: #007bff;
+  background-color: #3b409e;
   color: white;
 }
 
 #stop-btn {
-  background-color: #007bff;
+  background-color: #3b409e;
   color: white;
 }
 
 #reset-btn {
-  background-color: #007bff;
+
+  background-color: #3b409e;
   color: white;
 }
 
