--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ button {
 <body>
   <div class="pomodoro-container">
     <h1>Pomodoro Timer</h1>
+    <p id="session-type">Work Session</p>
     <div id="timer-display">25:00</div>
     <div class="buttons">
       <button id="start-btn">Start</button>
